//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  type String [not null]
  name String
  surname String
  money_balance Int [default: 0]
  company_name String
  bank_account String
  contact_person_name String
  street String
  apartment_suite_number String
  city String
  state String
  zip_code String
  mobile_number String
  purchases Purchase [not null]
  products Product [not null]
}

Table Product {
  id Int [pk, increment]
  year Int [not null]
  make String [not null]
  model String [not null]
  type String [not null]
  price Float [not null]
  distance Float [not null]
  image_url String
  isSold Boolean [not null, default: false]
  seller_id Int [not null]
  seller User [not null]
  purchases Purchase [not null]
}

Table Purchase {
  id Int [pk, increment]
  buyer_id Int [not null]
  product_id Int [not null]
  purchase_date DateTime [default: `now()`, not null]
  buyer User [not null]
  product Product [not null]
}

Ref: Product.seller_id > User.id

Ref: Purchase.buyer_id > User.id

Ref: Purchase.product_id > Product.id